--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/src/assets/img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Mind Berkeley</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QH2XP9LRJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-8QH2XP9LRJ');
+    </script>
+
   </head>
   <body>
     <div id="app"></div>
