--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/img/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Mind Berkeley</title>
-  </head>
-
+  <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QH2XP9LRJ"></script>
-
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -16,6 +10,12 @@
 
       gtag('config', 'G-8QH2XP9LRJ');
     </script>
+
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/src/assets/img/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Code Mind Berkeley</title>
+  </head>
 
   <body>
     <div id="app"></div>
